[package]
name = "bastion_rdp"
version = "1.0.0"
edition = "2021"
description = "堡垒机一键RDP连接工具"

[dependencies]
egui = "0.31"
eframe = "0.31"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
